2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* configure.ac: Bump version to 0.4.4.

2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* src/Banshee.AlarmClock.addin.xml.in: Add the category so
	  that the extension is displayed in Banshee 1.5.3.

2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* src/Alarm.cs, src/VolumeFade.cs, src/AlarmConfigDialog.cs,
	  src/AlarmClockService.cs, src/ConfigurationSchema.cs,
	  src/ConfigurationDialog.cs, src/SleepTimerConfigDialog.cs:
	  Minor code refactoring and cleanup.

2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* Banshee.AlarmClock.sln, Banshee.AlarmClock.csproj: Update
	  sln and csproj files.

2008-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.4.3 released. 

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* BUGS, README: Small updates

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* Banshee.AlarmClock.csproj: Still embed the .addin.xml as a
	  resource.

	* configure.ac: Bump version to 0.4.3

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* configure.ac, src/Banshee.AlarmClock.addin.xml,
	  src/Banshee.AlarmClock.addin.xml.in: Have configure
	  automatically put the version number in the .addin.xml.

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* COPYING, src/Alarm.cs, src/VolumeFade.cs,
	  src/AlarmConfigDialog.cs, src/AlarmClockService.cs,
	  src/ConfigurationSchema.cs, src/ConfigurationDialog.cs,
	  src/SleepTimerConfigDialog.cs: Add copyright headers to all
	  source files and update copyright information.

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* configure.ac: Rename configure option to --user-extension

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* build/m4/shamrock/mono.m4: Fix typo

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* alarm.mdp, alarm.mds, Banshee.AlarmClock.sln,
	  Banshee.AlarmClock.csproj: Convert solution and project